[gd_scene load_steps=6 format=3 uid="uid://ckm3kb4aosxb4"]

[ext_resource type="Script" uid="uid://dgduyultasupv" path="res://Scripts/tak_board.gd" id="1_1wqm5"]
[ext_resource type="CameraAttributesPractical" uid="uid://gtybhomfgbns" path="res://Scenes/cam_attr_normal.tres" id="2_la2l8"]
[ext_resource type="Script" uid="uid://bs1712e7qggo7" path="res://Scripts/camera.gd" id="3_yhhd6"]
[ext_resource type="PackedScene" uid="uid://dkwxditx1ga2f" path="res://Scenes/piece.tscn" id="5_63v3t"]
[ext_resource type="Theme" uid="uid://je1ecuklaqff" path="res://board_ui_theme.tres" id="6_la2l8"]

[node name="TakBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_1wqm5")

[node name="Root3D" type="Node3D" parent="."]

[node name="Camera" type="Camera3D" parent="Root3D"]
attributes = ExtResource("2_la2l8")
current = true
fov = 45.0
script = ExtResource("3_yhhd6")

[node name="Board" type="Node3D" parent="Root3D"]

[node name="Pieces" type="Node3D" parent="Root3D"]

[node name="Light" type="DirectionalLight3D" parent="Root3D"]
transform = Transform3D(0.234704, 0.84393823, -0.4823715, -0.0625096, 0.5083092, 0.858903, 0.970055, -0.1714351, 0.17205644, 0, 1.41202, 0)
light_energy = 6.0
shadow_enabled = true

[node name="MovePreview" parent="Root3D" instance=ExtResource("5_63v3t")]
visible = false
skeleton = NodePath("../..")

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("6_la2l8")

[node name="GameOver" type="PanelContainer" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -47.0
offset_right = 85.5
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2

[node name="Box" type="VBoxContainer" parent="UI/GameOver"]
layout_mode = 2

[node name="Result" type="Label" parent="UI/GameOver/Box"]
layout_mode = 2
size_flags_horizontal = 4
text = "Result"

[node name="FlatCount" type="Label" parent="UI/GameOver/Box"]
layout_mode = 2
size_flags_horizontal = 4
text = "x - x flats"

[node name="LeftBox" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
offset_left = 16.0
offset_top = 16.0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 12

[node name="Reserves" type="VBoxContainer" parent="UI/LeftBox"]
layout_mode = 2
size_flags_horizontal = 0

[node name="FlatsWhite" type="PanelContainer" parent="UI/LeftBox/Reserves"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="Box" type="HBoxContainer" parent="UI/LeftBox/Reserves/FlatsWhite"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/LeftBox/Reserves/FlatsWhite/Box"]
layout_mode = 2
text = "Flats:"

[node name="Count" type="Label" parent="UI/LeftBox/Reserves/FlatsWhite/Box"]
layout_mode = 2
text = "0"

[node name="CapsWhite" type="PanelContainer" parent="UI/LeftBox/Reserves"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="Box" type="HBoxContainer" parent="UI/LeftBox/Reserves/CapsWhite"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/LeftBox/Reserves/CapsWhite/Box"]
layout_mode = 2
text = "Cap Stones:"

[node name="Count" type="Label" parent="UI/LeftBox/Reserves/CapsWhite/Box"]
layout_mode = 2
text = "0"

[node name="RightBox" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -234.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 94.0
grow_horizontal = 0
theme_override_constants/separation = 12

[node name="Reserves" type="VBoxContainer" parent="UI/RightBox"]
layout_mode = 2
size_flags_horizontal = 8

[node name="FlatsBlack" type="PanelContainer" parent="UI/RightBox/Reserves"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="Box" type="HBoxContainer" parent="UI/RightBox/Reserves/FlatsBlack"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/RightBox/Reserves/FlatsBlack/Box"]
layout_mode = 2
text = "Flats:"

[node name="Count" type="Label" parent="UI/RightBox/Reserves/FlatsBlack/Box"]
layout_mode = 2
text = "0"

[node name="CapsBlack" type="PanelContainer" parent="UI/RightBox/Reserves"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="Box" type="HBoxContainer" parent="UI/RightBox/Reserves/CapsBlack"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/RightBox/Reserves/CapsBlack/Box"]
layout_mode = 2
text = "Cap Stones:"

[node name="Count" type="Label" parent="UI/RightBox/Reserves/CapsBlack/Box"]
layout_mode = 2
text = "0"
